# HackRU-2023

./: CMakeLists.txt  README.md  backend.py  frontend.html  style.css
assets/: flashcards.txt
assets/shaders/: sprite.vert
game/assets/shaders/: sprite.frag
game/src/: game_selector.cpp  game_selector.hpp  main_loop.hpp  renderer.cpp  set_download.cpp
game/src/DoonUI/: render.c
game/src/QuickMath/: quickmath.h
src/: game_selector.cpp  main.cpp  main_loop.cpp  renderer.hpp  set_download.cpp  set_download.hpp
src/games/: cactus_jump.cpp  cactus_jump.hpp
